# GreenLearning

./: .gitignore  AGENTS.md  CouplingNet.md  CouplingNetForSlide.md  README.md  codex_five_stencil_coupler_instruction.md  codex_hybrid_detach_coupler_training_instruction.md  codex_input_side_direct_source_stencil_lift_instruction.md  codex_physical_energy_loss_instruction.md  codex_smooth_mask_balance_projection_instructions.md  codex_stage2_coupler_only_training_instruction.md  codex_update_coupler_diff_res_features_instruction.md  codex_update_post_projection_aux_residual_coupler_instruction.md  coupling_net.md  double_losses.md  main.py  make_folds.py  make_splits.py  memory.md  model_structure.md  pipelines.md  plot_axial_lines.py  plot_coupling_logs.py  plot_coupling_logs_aux_temp.py  plot_green_logs.py  plot_logs.py  plot_logs2.py  plot_logs_old.py  plot_per_line_bars.py  pyproject.toml  requirements.txt  run_codex.md  test_loss.py  visualize_structured_baseline.py
cli/: eval_coupling.py  export_coupling_artifacts.py  export_green_artifacts.py  train.py
coefficients/: Convection_Diffusion_Reaction.py  Diffusion_Reaction_Ver2.py  Divergence_Free_Convection_Diffusion.py  Divergence_Free_Convection_Diffusion2.py  Divergence_Free_Convection_Diffusion_Reaction.py  Pure_Poisson.py  Sinusoidal_Diffusion_Only_Ver2.py  Smooth_Variable_Diffusion_Reaction.py
configs/: default_coupling.json  default_coupling2.json  default_green.json  sinusoidal_coefficients.py
models/: LevenbergMarquardt.py  MLP.py  __init__.py  activations.py  agm.py  greenlearning.py  greenlearning_no_homogeneous.py  lars.py  loss.py  loss_no_homogeneous.py  modified_greenlearning.py  modified_loss.py  oper_learn_arch.py  scheduler.py
plots/: l2_consistency.html  l2_consistency.json  loss.html  loss.json
plots_green/: loss.json
postprocessing/: plot_results.py  plot_training_dataset.py
preprocessing/: interpolator.py  random_function_generator.py  training_sets_generator.py  training_sets_generator_with_basis.py
test/: test_axial_dataset.py  test_backward_sampler.py  test_cli_train.py  test_coefficients.py  (+18 more)
(+565 files in other folders)
