[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modified-greenonet"
version = "0.1.0"
description = "Axial-inspired GreenONet solver for 2D Poisson problems."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch @ https://download.pytorch.org/whl/cu126/torch-2.11.0%2Bcu126-cp314-cp314-manylinux_2_28_x86_64.whl ; python_version == '3.14' and platform_system == 'Linux' and platform_machine == 'x86_64'",
  "torch>=2.11.0 ; python_version != '3.14' or platform_system != 'Linux' or platform_machine != 'x86_64'",
  "numpy>=1.26.0",
  "scipy>=1.11.0",
  "plotly>=5.23.0",
  "safetensors>=0.4.4",
  "rich>=13.7.0",
  "kaleido>=1.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
